--- a/docker/Dockerfile.opengl.opencv4.devel
+++ b/docker/Dockerfile.opengl.opencv4.devel
@@ -51,12 +51,19 @@ ENV HOME /home/${USERNAME}
 
 # Build opencv 4.1.2
 RUN mkdir $HOME/repos && cd $HOME/repos \
-  && git clone --progress --verbose https://github.com/opencv/opencv \
+  && git clone --progress --verbose https://github.com/opencv/opencv_contrib \
+  && cd opencv_contrib && git checkout 4.1.2
+RUN cd $HOME/repos && git clone --progress --verbose https://github.com/opencv/opencv  \
   && cd opencv && git checkout 4.1.2 \
   && mkdir build && cd build \
-  && cmake -D CMAKE_BUILD_TYPE=RELEASE -D INSTALL_C_EXAMPLES=OFF -D WITH_GSTREAMER=ON -D WITH_FFMPEG=ON \
-  -D BUILD_EXAMPLES=ON .. \
-  && make -j4 \
+  && cmake -D CMAKE_BUILD_TYPE=RELEASE \
+     -D INSTALL_C_EXAMPLES=OFF \
+     -D WITH_GSTREAMER=ON \
+     -D WITH_FFMPEG=ON \
+     -D OPENCV_ENABLE_NONFREE=ON \
+     -D BUILD_EXAMPLES=ON \
+     -D OPENCV_EXTRA_MODULES_PATH=$HOME/repos/opencv_contrib/modules .. \
+  && make -j10 \
   && sudo make install
 
 
