--- a/projects/SFND_2D_Feature_Tracking/.vscode/settings.json
+++ b/projects/SFND_2D_Feature_Tracking/.vscode/settings.json
@@ -53,6 +53,10 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "bit": "cpp",
+        "random": "cpp",
+        "cinttypes": "cpp",
+        "variant": "cpp"
     }
 }
