--- a/opencv_exercises/exercise12/CMakeLists.txt
+++ b/opencv_exercises/exercise12/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
 add_definitions(-std=c++11)
 
 set(CXX_FLAGS "-Wall" "-pedantic")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-project(camera_fusion)
+project(camera_fusion_yolo)
 
 find_package(OpenCV 4.1 REQUIRED)
 
