--- a/projects/SFND_3D_Object_Tracking/data/yolo/.gitattributes
+++ b/projects/SFND_3D_Object_Tracking/data/yolo/.gitattributes
@@ -1,1 +1,2 @@
-*.{png,bin,dat,weights} filter=lfs diff=lfs merge=lfs -text
+yolov3.weights filter=lfs diff=lfs merge=lfs -text
+yolov3-tiny.weights filter=lfs diff=lfs merge=lfs -text
